rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-server
  labels:
    app: rest-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-server
  template:
    metadata:
      name: rest-server
      labels:
        app: rest-server
    spec:
      containers:
      - name: rest-server
        image: USERNAME/demucs-rest:latest
        ports:
        - containerPort: 5050
