rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
spec:
  selector:
    app: rest-server
  type: NodePort
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5050
